<resources>
    <string name="app_name">Yo cuido lo público</string>
    <string name="action_settings">Settings</string>
    <string name="acerca_de">Acerca de</string>
    <string name="dummy_content_description">Content description</string>
    <string name="estado_pendiente">Pendiente</string>
    <string name="estado_validado">Validado</string>
    <string name="estado_rechazado">Rechazado</string>
    <string name="ubicacion_no_disponible">Ubicación actual no disponible</string>
    <string name="server_error_title">Error en el servidor</string>
    <string name="server_error_message">Por favor intente más tarde</string>
    <string name="conection_error_title">Error</string>
    <string name="conection_error_message">No es posible conectarse con el servidor. Por favor verifique que su dispositivo esté conectado a internet y vuelva a intentar.</string>
    <string name="ok">Aceptar</string>
    <string name="si">Sí</string>
    <string name="no">No</string>
    <string name="loading">Cargando&#8230; Por favor espere</string>
    <string name="home_reportar">Nuevo Reporte</string>
    <string name="home_consultar">Reportes Generales</string>
    <string name="home_consultar_mis">Mis Reportes</string>
    <string name="home_content_logo">Secretaría de Transparencia</string>
    <string name="home_no_tiene_reportes">Usted no ha reportado desde éste dispositivo</string>
    <string name="habilitar_gps">Para generar el reporte se debe activar el GPS del dispositivo</string>
    <string name="ajustes">Ajustes</string>
    <string name="cancelar">Cancelar</string>
    <string name="como_usar">Cómo usar</string>
    <string name="aviso_legal">Aviso legal</string>
    <string name="sobre_esta_aplicacion">Sobre esta aplicación</string>
    <string name="title_activity_reportar">Reporte</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_consultar_reporte"></string>
    <string name="ver_top_cinco">Ver Top 5 de Reportes</string>
    <string name="ver_en_colombia">Ver Reportes en Colombia</string>
    <string name="title_activity_top_cinco">Top 5</string>
    <string name="title_activity_reportar_r">Reporte</string>
    <string name="depto_municipio">Departamento / Municipio</string>
    <string name="obligatorios_1">Los campos con</string>
    <string name="asterisco">*</string>
    <string name="obligatorios_2">son de carácter obligatorio</string>
    <string name="campo_titulo_reporte">Título del reporte</string>
    <string name="campo_posible_entidad">Posible entidad responsable</string>
    <string name="campo_por_que">¿Por qué es un reporte?</string>
    <string name="mas_informacion">Más Información</string>
    <string name="campo_tiempo_existencia">Tiempo de existencia</string>
    <string name="campo_costo">Costo de la obra</string>
    <string name="campo_contratista">Contratista de la obra</string>
    <string name="boton_reportar">Reportar</string>
    <string name="reporte_exitoso">La imagen e información enviada pasarán a un proceso de validación, el administrador se reserva el derecho de modificar, complementar, eliminar total o parcialmente y no publicar la información falsa, de carácter ofensivo o agraviante.\nEste reporte no constituye una denuncia, puede interponer su denuncia completa en www.contraloriagen.gov.co y www.procuraduria.gov.co </string>
    <string name="terminar">Terminar</string>
    <string name="reportar_disclaimer">Está imagen pasará a un proceso de validación por parte del administrador, en caso de que la misma sea falsa,  de carácter ofensivo, agraviante, contenga amenazas o atente contra el buen nombre de las personas, el administrador se reserva el derecho de no publicarla.</string>
    <string name="diligenciar_todos">Por favor diligencie todos los campos marcados con *</string>
    <string name="tamanio_maximo_titulo">El tamaño máximo para el campo \'Título del reporte\' es de 80 caracteres</string>
    <string name="tamanio_maximo_entidad">El tamaño máximo para el campo \'Posible entidad responsable\' es de 80 caracteres</string>
    <string name="tamanio_maximo_costo">El tamaño máximo para el campo \'Costo de la obra\' es de 18 caracteres</string>
    <string name="tamanio_maximo_contratista">El tamaño máximo para el campo \'Contratista de la obra\' es de 80 caracteres</string>
    <string name="distancia_maxima_excedida">Debe estar a menos de 500 metros de la obra para poder agregar una foto.</string>
    <string name="title_activity_como_usar">Cómo usar</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="texto1">La aplicación móvil Yo Cuido Lo Público le permite reportar aquellas obras públicas que considere, tienen un impacto negativo para la comunidad, debido a que han sido abandonadas o están inconclusas; consultar los reportes de otros usuarios en Colombia y hacerle seguimiento a sus reportes.</string>
    <string name="texto2">Para reportar:\n1. Ubíquese frente a la obra que desea reportar.\n2. Revise si esta no ha sido reportada por otro usuario.\n3.	Si no ha sido reportada, oprima  el botón Reportar para iniciar tomando una foto.</string>
    <string name="texto3">Luego de tomar la fotografía de la obra que desea reportar,   ingrese la información necesaria para identificarlo. Aquellos campos marcados con asterisco son obligatorios.</string>
    <string name="texto4">En caso de encontrarse frente a una obra ya reportada, podrá  votar en contra de esta, adjuntar nuevas imágenes de la misms y/o  complementar la información faltante.</string>
    <string name="texto5">Si desea consultar obras ya reportadss, puede usar las opciones Ver Reportes en Colombia, para consultar todos los reportes del país; y Top 5 de Reportes para ver los reportes más votados por los usuarios de la aplicación.</string>
    <string name="texto6">Puede hacerle seguimiento a sus reportes a través de la opción Consultar mis Reportes. En esta verá si su reporte fue validado para publicarse, los votos que ha recibido y la información adicional que otros usuarios hayan complementado.</string>
    <string name="ir">Ir</string>
    <string name="title_activity_acerca_de">Sobre esta aplicación</string>
    <string name="digits">abcdefghijklmnñopqrstuvwxyz 0123456789</string>
    <string name="version_number">Yo Cuido Lo Público. Versión 1.0 ©2017. Derechos Reservados \n\nTenga en cuenta que esta aplicación requiere acceso a internet, y puede consumir recursos de su plan de datos</string>
    <string name="title_activity_reportes_colombia_municipio">Región</string>
    <string name="colombia_municipio_descripcion">Seleccione el departamento y municipio donde desea consultar los reportes. Sólo se listan aquellos donde hay reportes.</string>
    <string name="colombia_municipio_consultar_btn">Consultar en el mapa</string>
</resources>