<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e6e6e6"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="fill_parent"
        android:layout_height="70dp"
        android:background="@drawable/main_background" >

        <TextView
            android:id="@+id/txtReportes"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="23dp"
            android:layout_marginTop="10dp"
            android:text="@string/app_name"
            android:textColor="@color/red_color"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/title"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="23dp"
            android:text="@string/title_activity_reportar_r"
            android:textColor="@color/black_color"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/deptoMunicipio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_marginBottom="7dp"
            android:layout_marginLeft="23dp"
            android:text="@string/depto_municipio"
            android:textColor="@color/black_color"
            android:textSize="12sp" />
    </RelativeLayout>



    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/obligatorios_1"
                    android:textColor="@color/home_text_color" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/asterisco"
                    android:textColor="@color/home_text_color" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/obligatorios_2"
                    android:textColor="@color/home_text_color" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginTop="12dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/asterisco"
                    android:textColor="@color/home_text_color" />

                <EditText
                    android:id="@+id/titulo"
                    style="@style/Reportes.EditText"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:digits="@string/digits"
                    android:hint="@string/campo_titulo_reporte"></EditText>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginTop="12dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/asterisco"
                    android:textColor="@color/home_text_color" />

                <EditText
                    android:id="@+id/posible_entidad"
                    style="@style/Reportes.EditText"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:digits="@string/digits"
                    android:hint="@string/campo_posible_entidad"></EditText>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginTop="12dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/asterisco"
                    android:textColor="@color/home_text_color" />

                <Spinner
                    android:id="@+id/spinnerPorQue"
                    style="@style/Reportes.Spinner"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp" />
            </LinearLayout>

            <TextView
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="23dp"
                android:layout_marginTop="10dp"
                android:text="@string/mas_informacion"
                android:textColor="@color/home_text_color"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/spinnerTiempo"
                style="@style/Reportes.Spinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="23dp"
                android:layout_marginRight="12dp"
                android:layout_marginTop="10dp" />

            <EditText
                android:id="@+id/costo"
                style="@style/Reportes.EditText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="23dp"
                android:layout_marginRight="12dp"
                android:layout_marginTop="12dp"
                android:hint="@string/campo_costo"
                android:inputType="number"></EditText>

            <EditText
                android:id="@+id/contratista"
                style="@style/Reportes.EditText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="23dp"
                android:layout_marginRight="12dp"
                android:layout_marginTop="12dp"
                android:digits="@string/digits"
                android:hint="@string/campo_contratista"></EditText>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="23dp"
                android:layout_marginRight="12dp"
                android:layout_marginTop="4dp"
                android:text="@string/reportar_disclaimer"
                android:textColor="@color/home_text_color"
                android:textSize="12sp" />

            <Button
                android:id="@+id/btnReportar"
                style="@style/ButtonRed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="10dp"
                android:text="@string/boton_reportar" />
        </LinearLayout>
    </ScrollView>


</LinearLayout>