<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:baselineAligned="false"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:background="@drawable/main_background" >

        <TextView
            android:id="@+id/txtReportes"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="23dp"
            android:layout_marginTop="10dp"
            android:text="@string/app_name"
            android:textColor="@color/red_color"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/title"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="23dp"
            android:text="@string/title_activity_reportes_colombia_municipio"
            android:textColor="@color/black_color"
            android:textSize="20sp" />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/colombia_municipio_descripcion" />

    <Spinner
        android:id="@+id/spinnerDeptos"
        style="@style/Reportes.Spinner"
        android:layout_width="fill_parent"
        android:layout_marginTop="19dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp" />

    <Spinner
        android:id="@+id/spinnerMunicipios"
        style="@style/Reportes.Spinner"
        android:layout_width="fill_parent"
        android:layout_marginTop="6dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp" />
    
    <Button
        android:id="@+id/btnVerEnMapa"
        style="@style/ButtonRed"
        android:layout_marginTop="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:text="@string/colombia_municipio_consultar_btn" />

</LinearLayout>