<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/main_background"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:background="@drawable/main_background" >

        <TextView
            android:id="@+id/txtReportes"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="23dp"
            android:layout_marginTop="10dp"
            android:text="@string/app_name"
            android:textColor="@color/white_color"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/title"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="23dp"
            android:text="@string/title_activity_como_usar"
            android:textColor="@color/white_color"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_ir"
            style="@style/ButtonRed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="5dp"
            android:text="@string/ir" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/walktrought_background" >

        <ViewFlipper
            android:layout_marginTop="16dp"
            android:id="@+id/gallery"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginBottom="30dp" >
        </ViewFlipper>

        <TextView
            android:id="@+id/i"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:textColor="@android:color/white"
            android:textSize="80sp" />
        
        <TextView
            android:id="@+id/text_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="20dp"
            android:textColor="@android:color/white"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="3dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/indicador1" />
    </RelativeLayout>

</LinearLayout>