<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/contentLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:baselineAligned="false"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/fondos03"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">


        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center_vertical"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:layout_marginTop="350sp">

            <LinearLayout
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/btn_reportar"
                    style="@style/ButtonReport"
                    android:layout_width="70sp"
                    android:layout_height="70sp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/field_distance"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal"
                    android:text="@string/home_reportar"
                    android:textColor="@color/home_text_color" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/btn_consultar_reportes"
                    style="@style/ButtonFind"
                    android:layout_width="70sp"
                    android:layout_height="70sp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/field_distance"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal"
                    android:text="@string/home_consultar"
                    android:textColor="@color/home_text_color" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/btn_consultar_mis_reportes"
                    style="@style/ButtonMyElephants"
                    android:layout_width="70sp"
                    android:layout_height="70sp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/field_distance"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal"
                    android:text="@string/home_consultar_mis"
                    android:textColor="@color/home_text_color" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

    <ImageView
        android:id="@+id/botonAyuda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:contentDescription="@+id/botonAyuda"
        android:gravity="right"
        android:src="@drawable/ayuda" />

<!--    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/home_content_logo"
        android:src="@drawable/logo_secretaria"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />-->

</RelativeLayout>